# Katas

./: .gitignore  .travis.yml  README.md
BankKata/src/bankkata/: Clock.java  StatementPrinter.java  TransactionRepository.java
BankKata/tests/bankkata/: AccountShould.java  PrintStatementFeature.java  StatePrinterShould.java
BowlingScala/: build.sbt
BowlingScala/src/main/scala-2.11/: bowling.scala
BowlingScala/src/test/scala-2.11/: BowlingShould.scala
GameOfLife/: build.gradle
GameOfLife/gradle/wrapper/: gradle-wrapper.properties
Hanoi/src/: Console.java  MovesPrinter.java
Hanoi/tests/: HanoiFeature.java  HanoiShould.java  MovesPrinterShould.java
KeyValuePairFreeScala/: build.sbt
KeyValuePairFreeScala/project/: plugins.sbt
KeyValuePairFreeScala/src/main/scala/: Interaction.scala  InteractionKv.scala  Main.scala
ParserCombinators/: build.sbt
ParserCombinators/src/main/scala/: BooleanParser.scala  Calculator.scala
ParserCombinators/src/test/scala/: BooleanCalculatorTest.scala  IniParserTest.scala
RomanNumerals/gradle/wrapper/: gradle-wrapper.properties
RomanNumeralsScala/: build.sbt
RomanNumeralsScala/src/test/scala/: RomanNumeralsShould.scala
SalarySlip/: settings.gradle
SalarySlip/src/main/java/salaryslip/: AnnualAmount.java  Employee.java  GrossSalaryCalculation.java  MonthlyAmount.java  SalarySlipBuilder.java  SalarySlipGenerator.java  TaxFreeAllowanceCalculation.java  TaxablePayableCalculation.java
ScalaBowling/: build.sbt
ScalaBowling/src/test/scala/: Bowling.scala  BowlingTest.scala
TicTacToeScala/: build.sbt
bank-kata-haskell/: bank-kata-haskell.cabal
bank-kata-haskell/src/BankKata/: BankAccount.hs  Natural.hs
bank-kata-haskell/test/BankKata/: BankAccountSpec.hs
bank-kata/haskell/: .gitignore  LICENSE  README.md  bank-kata-haskell.cabal  stack.yaml
bank-kata/haskell/src/BankKata/: BankAccount.hs
bank-kata/java/src/bankkata/: Account.java  Console.java  StatementPrinter.java  Transaction.java
bank-kata/java/tests/bankkata/: ClockShould.java  TransactionRepositoryShould.java
boolean-parser/: build.sbt
bowling/java/gradle/wrapper/: gradle-wrapper.properties
hanoi/src/: Hanoi.java  Move.java
key-value-pair/src/main/scala/: Interaction.scala  Main.scala
mars-rover-haskell/: .gitignore  README.md
mars-rover-haskell/app/: Main.hs
mars-rover-haskell/src/Me/Panavtec/Mars/: Marsrover.hs
mars-rover-haskell/test/Me/Panavtec/Mars/: MarsroverSpec.hs
mars-rover/haskell/: mars-rover-kata.cabal
parser-combinators/src/main/scala/: Calculator.scala  IniParser.scala  ParserExample.scala
parser-combinators/src/test/scala/: ExampleSpec.scala
roman-numerals/scala/src/main/java/: romansNumeral.scala
salary-slip/: build.gradle
salary-slip/gradle/wrapper/: gradle-wrapper.properties
salary-slip/src/main/java/salaryslip/: EmployeeID.java  NationalInsuranceCalculation.java  SalarySlip.java  TaxableIncomeCalculation.java
(+42 files in other folders)
