name:                bank-kata-haskell
version:             0.1.0.0
homepage:            https://github.com/panavtec/bank-kata-haskell#readme
license:             BSD3
license-file:        LICENSE
author:              Christian Panadero
maintainer:          panavtec@gmail.com
copyright:           Apache2
category:            katas
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     BankKata.BankAccount
                     , BankKata.Natural
  build-depends:       base >= 4.7 && < 5
                     , time
  default-language:    Haskell2010

executable bank-kata-haskell
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , bank-kata-haskell

  default-language:    Haskell2010

test-suite bank-kata-haskell-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , bank-kata-haskell

                     , mtl
                     , hspec
                     , QuickCheck
                     , time
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/panavtec/bank-kata-haskell
