name:                mars-rover-kata
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/panavtec/mars-rover-haskell#readme
license:             BSD3
license-file:        LICENSE
author:              Christian Panadero
maintainer:          panavtec@gmail.com
copyright:           2017 Christian Panadero
category:            Katas
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Me.Panavtec.Mars.Marsrover
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable mars-rover-kata
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , mars-rover-kata
  default-language:    Haskell2010

test-suite mars-rover-kata-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , mars-rover-kata
                     , hspec
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/panavtec/mars-rover-haskell
